objects/Evaluation_Form_Field_Option__c.object
<CustomObject>
    <fields>
        <fullName>Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Form_Field__c</fullName>
        <label>Evaluation Form Field</label>
        <referenceTo>Evaluation_Form_Field__c</referenceTo>
        <relationshipLabel>Evaluation Form Field Options</relationshipLabel>
        <relationshipName>Evaluation_Form_Field_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_ID__c</fullName>
        <label>Option ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Type__c</fullName>
        <label>Option_Type</label>
        <picklist>
            <picklistValues>
                <fullName>guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>repair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Evaluation Form Field Option</label>
    <nameField>
        <displayFormat>efo{000000}</displayFormat>
        <label>Evaluation Form Field Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Form Field Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>